--- a/config/locales/pt-BR/infos/message.yml
+++ b/config/locales/pt-BR/infos/message.yml
@@ -1,3 +1,4 @@
 pt-BR:
   success: "Sua operação foi efetuada com successo!"
   confirm_destroy: "Tem certeza que deseja remover?"
+  disable_with: "Carregando..."
