--- a/config/locales/pt-BR/infos/message.yml
+++ b/config/locales/pt-BR/infos/message.yml
@@ -2,3 +2,10 @@ pt-BR:
   success: "Sua operação foi efetuada com successo!"
   confirm_destroy: "Tem certeza que deseja remover?"
   disable_with: "Carregando..."
+  activerecord:
+    errors:
+      models:
+        'finance/payable_parcel':
+          attributes:
+            due:
+              invalid_date: "data inválida"
